<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/list_contact_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/user_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/list_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@id/list_contact_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/list_contact_number"/>

    <TextView
        android:id="@+id/list_contact_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_number"
        android:textSize="15sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@id/list_contact_photo"
        app:layout_constraintTop_toBottomOf="@id/list_contact_name"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/list_contact_delete"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/delete_button"
        android:src="@drawable/baseline_delete_icx"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>