<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="180dp"
        android:background="@drawable/layout_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/enter_contact_photo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/user_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter"
            android:background="@drawable/layout_add_image"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
            android:id="@+id/enter_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:hint="@string/enter_user_name"
            android:inputType="text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/enter_contact_number"
            app:layout_constraintStart_toEndOf="@id/enter_contact_photo"
            app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/enter_contact_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_user_number"
                android:layout_marginStart="25dp"
                android:textSize="15sp"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@id/enter_contact_photo"
                app:layout_constraintTop_toBottomOf="@id/enter_contact_name"
                app:layout_constraintBottom_toTopOf="@+id/enter_contact_save"/>

        <Button
            android:id="@+id/enter_contact_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:backgroundTint="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>